minor update to liquid highlight

--- a/_posts/2017-08-01-day30.markdown
+++ b/_posts/2017-08-01-day30.markdown
@@ -14,13 +14,13 @@ categories: 100DaysofCode
 
     + How to add a reading time counter - I created a copy of the layouts/post.html and put it in my main site folder as _layouts/post.html. In this copy, I added this line right after the existing HTML header and before the post content. Note that I am not convinced that this is the right place to put the timing. I may move it to the main post page with the preview, so you know how long it will take before opening it up. But this is how I have it at the moment.
     
-    {% raw %}
+    ```{% raw %}
         {% assign words = content | number_of_words %}
         {% if words < 270 %}
             1 min read
         {% else %} {{ words | divided_by:135 }} min read
         {% endif %}
-    {% end raw %}
+    {% end raw %}```
 
 **Thoughts**: I wish my first try would work. 
 
