--- a/_posts/2017-07-18-day16.markdown
+++ b/_posts/2017-07-18-day16.markdown
@@ -14,3 +14,5 @@ categories: 100DaysofCode
 
 **Link to work:** [Random Quote Machine](https://codepen.io/jessachandler/pen/dREOmP)
 
+<p data-height="422" data-theme-id="0" data-slug-hash="dREOmP" data-default-tab="js,result" data-user="jessachandler" data-embed-version="2" data-pen-title="Simply Quotes" data-preview="true" class="codepen">See the Pen <a href="https://codepen.io/jessachandler/pen/dREOmP/">Simply Quotes</a> by jess (<a href="https://codepen.io/jessachandler">@jessachandler</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
