--- a/_posts/2017-07-23-day21.markdown
+++ b/_posts/2017-07-23-day21.markdown
@@ -14,3 +14,5 @@ categories: 100DaysofCode
 
 **Link to work:**  [Weather App](https://codepen.io/jessachandler/pen/qjeWRM) 
 
+<p data-height="232" data-theme-id="0" data-slug-hash="qjeWRM" data-default-tab="result" data-user="jessachandler" data-embed-version="2" data-pen-title="Simply Weather" class="codepen">See the Pen <a href="https://codepen.io/jessachandler/pen/qjeWRM/">Simply Weather</a> by jess (<a href="https://codepen.io/jessachandler">@jessachandler</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
