--- a/_posts/2017-10-13-r2d2.markdown
+++ b/_posts/2017-10-13-r2d2.markdown
@@ -7,7 +7,7 @@ categories: 100DaysofCode
 + 
 
 **Thoughts**:  
-+ *Offline First* This morning, I saw a twitter post about offline first development and how most developers didn't really plan for it. Of course, recognizing myself in this, I followed some links and did a few searches and read some things. I'm not entirely sure, but I think that I have offline support for my data driven applications that use firebase based on the firebase documentation, but I will need to refactor my application to actually benefit. I also learned that firebase came out with another database platform that will be better for nested applications. The comparison shows that they have not only different structures but also different price bases: [Firebase Realtime Database v Firestore](https://firebase.google.com/docs/firestore/rtdb-vs-firestore)
+*Offline First* This morning, I saw a twitter post about offline first development and how most developers didn't really plan for it. Of course, recognizing myself in this, I followed some links and did a few searches and read some things. I'm not entirely sure, but I think that I have offline support for my data driven applications that use firebase based on the firebase documentation, but I will need to refactor my application to actually benefit. I also learned that firebase came out with another database platform that will be better for nested applications. The comparison shows that they have not only different structures but also different price bases: [Firebase Realtime Database v Firestore](https://firebase.google.com/docs/firestore/rtdb-vs-firestore)
 
 In my exploration of offline first, I found this [fantastic short list](https://techbeacon.com/offline-first-web-mobile-apps-top-frameworks-components) of options. I briefly considered learning how to use ionic and angular after reading [Building An Ionic App with Offline Support](http://blog.ionic.io/building-an-ionic-app-with-offline-support-part-1/). I like the way that it uses SQL structure because NOSQL is breaking my brain. I also considered using [couchbase](https://developer.couchbase.com/documentation/mobile/1.4/installation/ios/index.html) because the syntax is similar to what I've started with firebase and I can relate to the conceptuatl approach. However, I'm trying to stay disciplined and finish the items in my todo list before stepping out for the next shiny thing. I put them on my "to check out" list. 
 
