edit and increase font size in code

--- a/_posts/2017-10-18-r2d6.markdown
+++ b/_posts/2017-10-18-r2d6.markdown
@@ -9,7 +9,7 @@ I guess technically yesterday was day 6, but I was travelling up to another part
 A famous poem by Ieyasu is placed on a placard on the way up to his burial area, and it basically translates that "we should walk through life slowly, as if we are carrying a heavy burden, rather than rush." Sorry, I can't make that poetic in English. I'm trying to learn from wise Ieyasu and not rush so much. After all, he also says that we seek success, but if we gain it too early in life, what will we have remaining to live for? **Aside: I seek time to be outside in the sunshine - I'm not sure if this is success or not.**
 
 ## Today's Progress
-+ I finally built a nice little view where everyone who is going on a trip shows up for each item, activity, lodging, or travel for the trip. They get a little blue check mark if they are part of the activity. The default is that everyon on a trip will participate in everything, but there are definitely times when this is not true.
++ I finally built a nice little view where everyone who is going on a trip shows up for each item, activity, lodging, or travel for the trip. They get a little blue check mark if they are part of the activity. The default is that everyone on a trip will participate in everything, but there are definitely times when this is not true.
 
 This solution includes a check mark that I borrowed from Stack Overflow. My original check mark did not look like the UI that users may be used to, so I changed it up to match in accordance with Apple Design Guidelines. If you want to implement a little green check mark on collection view cells (or table view cells, kinda any cell), you can use this method [ported from Skaarup's answer on Stack Overflow](https://stackoverflow.com/questions/18977527/how-do-i-display-the-standard-checkmark-on-a-uicollectionviewcell/42426809#comment80557043_42426809).
 
