--- a/_posts/2017-10-19-r2d7.markdown
+++ b/_posts/2017-10-19-r2d7.markdown
@@ -9,7 +9,7 @@ categories: 100DaysofCode
 
 <img src="/images/pigfxshot.png" width="200px"/>
 
-+ I spent some time in swift playgrounds figuring out how to do a few things programmatically without the storyboard. I created my first Gist with this. It inclues: creating a stack view, creating a collection view that is horizontal only, and using unicode characters as graphics.
++ I spent some time in swift playgrounds figuring out how to do a few things programmatically without the storyboard. I created my first Gist with this. It includes: creating a stack view, creating a collection view that is horizontal only, and using unicode characters as graphics. The main difference between creating with and without storyboard is dealing with the alignment. 
 
 <img src="/images/gistunicodeshot.png" width="600px"/>
 
