--- a/_posts/2017-10-22-r2d10.markdown
+++ b/_posts/2017-10-22-r2d10.markdown
@@ -11,14 +11,17 @@ It is pouring rain here (after two weeks of PNW like weather) ahead of Typhoon L
 + I helped my kiddo take ownership of his own website after a short tutorial on: git, github, markdown, css, liquid, and jekyll. It all seemed like I should have been able to build it and learn all that stuff much faster. hehe. 
 + I solved a hairy issue with reusing custom UIViews that had been eluding me for some time. The main issue was that I was not setting up the bounds/constraints for the views in a way that my view controller could see them. I'm super excited because I prefer to not use the storyboard if I can help it, but all of the books/tutorials that I've used start in the storyboard - it's nonsense if you want to reuse pieces.
 
-![Super Exciting Stack View](/images/screenshotstackview.png){:class="wide-img"} - see [Gist for Super Exciting Stack View](https://gist.github.com/monkeywithacupcake/f8288e47d30dbcc0316cbd0b3dbe7db3)
+![Super Exciting Stack View](/images/screenshotstackview.png){:class="wide-img"} - see Gist 
 
 + Also, I spent more time on animations today and figured out how to combine them to keep the animations out of my view controllers. woot. 
 
-![View Animations in Extensions](/images/collectionAnimate.png){:class="wide-img"}  - see [Gist for View Animations in Extensions](https://gist.github.com/monkeywithacupcake/4fe632c3373b7281359237fb160757af)
-
+![View Animations in Extensions](/images/collectionAnimate.png){:class="wide-img"}  - see Gist 
 
 NOTE: The terrible colors are intentional. 
 
 ## Thoughts
 **Collection Views in Swift** I have been spending quite a bit of time playing with collection views trying to update my Crushing it application to swift 4 with the behavior that I want and without any storyboards. I stumbled across [an excellent article on the layouts for collection views](http://martiancraft.com/blog/2017/05/collection-view-layouts/) today. I appreciated the clarity with the supplementary and decorative views that I have not really used much, but can see a use for in the future. 
+
+## Links to Work
++ [Gist for Super Exciting Stack View](https://gist.github.com/monkeywithacupcake/f8288e47d30dbcc0316cbd0b3dbe7db3)
++ [Gist for View Animations in Extensions](https://gist.github.com/monkeywithacupcake/4fe632c3373b7281359237fb160757af)
