fix highlight liquid

--- a/_posts/2017-12-09-r2d53.md
+++ b/_posts/2017-12-09-r2d53.md
@@ -59,7 +59,7 @@ class Place: Object{
     // MARK: Methods
     // ...
 }
-{% end swift %}
+{% endhighlight %}
 
 Without Realm - for when I was working with Firebase and JSON
 
@@ -112,7 +112,7 @@ class Place: NSObject{
     // MARK: Methods
     // ...
 }
-{% end swift %}
+{% endhighlight %}
 
 ## Thoughts  
 **The only way to do it is to do it** I wasted time earlier this week trying to figure out a way to hookup a worthwhile data platform for local storage for offline first design without having to make a ton of changes in the data structure (again). However, I found that nothing besides creating a local JSON file or plist would really work that way, and that approach is not extendable later. Having to just go through the effort of reconstructing the data again was very frustrating, but it has to be done for better performance. I'm glad that I rewrote most of the classes yesterday and was able to get many of the cascading errors squashed today. I won't have much time tomorrow, but I hope to get a few functions working again with sample data. 
