--- a/_posts/2022-01-01-podcasts-of-2021.md
+++ b/_posts/2022-01-01-podcasts-of-2021.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Podcasts from 2021"
 date:   2022-01-01
-categories: podcasts, reviews
+categories: reviews
 ---
 
 I listen to a lot of podcasts. I love audio as a medium. Video is too much for me, and reading requires me to be still. When I can, I prefer audio. 
