updates reading log post

--- a/_posts/2022-01-02-reading-of-2021.md
+++ b/_posts/2022-01-02-reading-of-2021.md
@@ -5,7 +5,16 @@ date:   2022-01-02
 categories: reading
 ---
 
-So many books
+I read a lot last year - managed to log 86 books, and I know that there were a couple that I read through on the recliner and never even put in my journal. I recorded one DNF. 
+
+Several of these books I only heard of and/or read because of the 2021 Book Riot Read Harder challenge - including both of the romances, and the Mango and Peppercorns food memoir. 
+
+Last year's books include some that I really enjoyed - I gave 9 books 5 stars this year! They also include a few that I slogged through but kinda regretted for different reasons - either the format was not in my taste (*I accidentally read a horror novel*), or the writing was jarring, or I hated all the characters. 
 
 ![2021 Reading Log](/assets/img/readinglog2021.jpg)
 
+This year (2022), I'm planning to read some non-fiction a little more critically - sitting with it and taking notes - and really digesting the material. I'm also planning to continue bringing joy to my ears with some easy listen audiobooks. I am not sure how much fiction that I will read in print this year. I have already joined two book clubs - one for PNWOW and one for work. These clubs will have me reading nature/adventure and data science books. Perfect.
+
+**note to self**: You really want to adjust a whole lot of things about this blog right now, but you can't. Let it go.
+
+**note to self**: In 2021, you used a paper journal daily to mark starts and finishes, a paper journal log to (sometimes) track overall feelings of books, goodreads to (sometimes) log reviews and plan reading, instagram to log audiobooks and hot takes, and the Book Riot Google Sheet for logging. Then, you used R to make graphics. Pick something simpler. No need to record dates, reviews, etc. in more than one place! **!!**
