--- a/_posts/2022-09-05-holidays.md
+++ b/_posts/2022-09-05-holidays.md
@@ -19,4 +19,8 @@ According to the [Department of Labor](https://www.dol.gov/general/laborday/hist
 
 I went over to read the congressional story about making this new holiday expecting some real juicy bits of argument, but alas. According to [History of the House](https://history.house.gov/Historical-Highlights/1851-1900/The-first-Labor-Day/) the bill passed the senate pretty much as soon as it came to the floor and also sailed through the house. An interesting tidbit here is that the Chairman of the House Labor Committee told people to consider ways to make working lives easier and submit them to their congress people each year on Labor Day. Hmm. I have never heard that instruction. I hope lots of people are submitting ideas today. While I only went for a run and hung out with my dog; I hope that others did their solemn duty of observing trade shows and sending ideas for laws to improve the lives of workers. Those people are the best. If you are one of them, congratulations. I appreciate you. (Said in earnest).
 
+
+The plot thickens a little - according to [this story from the History Channel](https://www.history.com/topics/holidays/labor-day-1), just a couple of days before this bill passed, there was a strike. There were many strikes during this period, but this one was for rail cars, and it delayed shipping and led to riots. Many people died. Just two days afterwards, congress picked up the bill that had been sitting around for 8 months and passed it. So, it was a bit of appeasement after all. I do so love being kinda a little right. 
+
+
 If you must know for yourself, the [actual bill](https://blogs.loc.gov/law/files/2011/09/S-730.pdf) is exceedingly short. Less than one page. It just declares a holiday; no other things tacked on. **wild, right?**
